k8s/finance/01-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: finance
  labels:
    namespace: finance
